# bug-free-lamp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.test.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
.github/worklows/: test.yml
src/controllers/: _helpers.py  authController.py  userController.py  userTypeController.py
src/infra/database/: __init__.py  database.py  populate.py  serializers.py
src/infra/database/scripts/: rules.sql  tables.sql
src/infra/security/: hashing.py
src/schemas/: userSchema.py  userTypeSchema.py
src/services/: __init__.py  _helpers.py  userService.py  userTypeService.py
src/tests/: test_userType.py
